--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Gus Cookbook</title>
+    <title>Gamemaker Studio 2 Beginner Tutorial</title>
     <meta name="author" content="Gus">
     <meta name="description" content="Recipe book">
     <link href="styles.css" rel = "stylesheet" type = "text/css"/>
@@ -37,26 +37,21 @@
 <div class = "Container">
 
 
-<h1> The Gus Cookbook
+<h1> What is Gamemaker Studio 2?
 </h1>
-<img src="images/ratatouille.jpg" alt="Ratatouille">
+<!--<img src="images/ratatouille.jpg" alt="Ratatouille">--> 
 
 
 
 
 
-<p>The Gus Cookbook is the only cookbook that includes the native diversity of Oxford food in a fun and creative way</p>
+<p>Gamemaker Studio 2 or Gamemaker, is a development environment for 2D games. It has a comprehensive list of tools for designing games and is very user friendly. It features both a drag and drop style of programming and its own programing language called game maker language, for this tutorial I will be using game maker language (GML)</p>
    
-
-
-<p><a href= "https://www.flickr.com/photos/80975498@N00/1392744417" > "Ratatouille" by benmillett is licensed under CC BY-NC-ND 2.0 </a>
 </div>
-  
   <script>
   function openNav() {
     document.getElementById("mySidenav").style.width = "250px";
   }
-
   function closeNav() {
     document.getElementById("mySidenav").style.width = "0";
   }
